--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@studiometa/scss-toolkit",
-  "version": "1.0.5",
+  "version": "1.1.0-beta.0",
   "description": "SCSS Toolkit",
   "main": "src/index.scss",
   "scripts": {
