--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@studiometa/scss-toolkit",
-  "version": "1.2.0.beta.0",
+  "version": "1.2.0-beta.1",
   "description": "SCSS Toolkit",
   "main": "src/index.scss",
   "scripts": {
