--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "gulp styles-build",
     "lint": "stylelint ./src/",
-    "fix": "stylelint ./src/ --fix"
+    "fix": "stylelint ./src/ --fix",
+    "eslint": "eslint .",
+    "eslint-fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -19,9 +21,11 @@
   },
   "homepage": "https://github.com/studiometa/scss-toolkit#readme",
   "devDependencies": {
-    "@studiometa/gulp-config": "^1.3.0-beta.1",
+    "@studiometa/eslint-config": "^1.1.3",
+    "@studiometa/gulp-config": "^1.3.1",
     "@studiometa/prettier-config": "^1.0.0",
-    "@studiometa/stylelint-config": "^1.0.1",
+    "@studiometa/stylelint-config": "^1.0.3",
+    "eslint": "^5.16.0",
     "stylelint": "^9.8.0"
   },
   "dependencies": {
