Add some more robust tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "SCSS Toolkit",
   "main": "src/framework/index.scss",
   "scripts": {
-    "test": "gulp styles-build",
+    "test": "npm run lint && npm run test-build && echo 'All test passed! 🎉' && exit 0",
+    "postinstall": "ln -s ./src/components ./components",
+    "test-build": "if gulp styles-build -q 2>&1 >/dev/null | tee tmp | grep -q 'Error'; then cat tmp && rm tmp && exit 1; else rm tmp && exit 0; fi;",
     "lint": "stylelint ./src/",
     "fix": "stylelint ./src/ --fix",
     "eslint": "eslint .",
