--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SCSS Toolkit",
   "main": "src/framework/index.scss",
   "scripts": {
-    "test": "npm run lint && npm run test-build && echo 'All test passed! 🎉\n' && exit 0",
+    "test": "npm run lint && npm run eslint && npm run test-build && echo 'All test passed! 🎉\n' && exit 0",
     "prepare": "npm run test",
     "postinstall": "ln -s ./src/components ./components",
     "test-build": "if gulp styles-build -q 2>&1 >/dev/null | tee tmp | grep -q 'Error'; then cat tmp && rm tmp && exit 1; else rm tmp && exit 0; fi;",
