Add missing font-family function helpers

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "stylelint ./src/",
     "fix": "stylelint ./src/ --fix",
     "eslint": "eslint .",
-    "eslint-fix": "eslint --fix ."
+    "eslint-fix": "eslint --fix .",
+    "dev": "gulp"
   },
   "repository": {
     "type": "git",
