--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run lint && npm run eslint && npm run test-build && echo 'All test passed! 🎉\n' && exit 0",
     "prepare": "npm run test",
-    "postinstall": "ln -s ./src/components ./components",
+    "postinstall": "ln -s ./src/components/ ./components",
     "test-build": "if gulp styles-build -q 2>&1 >/dev/null | tee tmp | grep -q 'Error'; then cat tmp && rm tmp && exit 1; else rm tmp && exit 0; fi;",
     "lint": "stylelint '**/*.scss'",
     "fix": "stylelint '**/*.scss' --fix",
@@ -28,7 +28,7 @@
     "@studiometa/eslint-config": "^1.1.3",
     "@studiometa/gulp-config": "^1.3.1",
     "@studiometa/prettier-config": "^1.0.0",
-    "@studiometa/stylelint-config": "^1.0.3",
+    "@studiometa/stylelint-config": "^1.2.1",
     "eslint": "^5.16.0",
     "husky": ">=1",
     "lint-staged": ">=8",
