--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
   },
   "homepage": "https://github.com/studiometa/scss-toolkit#readme",
   "devDependencies": {
-    "@studiometa/eslint-config": "^1.1.3",
-    "@studiometa/gulp-config": "^1.3.1",
+    "@studiometa/eslint-config": "^1.1.4",
+    "@studiometa/gulp-config": "^1.4.1",
     "@studiometa/prettier-config": "^1.0.0",
-    "@studiometa/stylelint-config": "^1.2.1",
-    "eslint": "^5.16.0",
+    "@studiometa/stylelint-config": "^1.2.2",
+    "eslint": "^6.0.1",
     "husky": ">=1",
     "lint-staged": ">=8",
-    "stylelint": "^9.8.0"
+    "prettier": "^1.18.2",
+    "stylelint": "^10.1.0"
   },
   "dependencies": {
     "reset-css": "^4.0.1"
